# fstinterpreter

./: AG60.bas  AG60.json  AG60.xml  AG60_mix.txt  AG60_xpath.txt  ALL_INSTRUCTION_TEST.bas  ALL_INSTRUCTION_TEST.json  ALL_INSTRUCTION_TEST.xml  ALL_INSTRUCTION_TEST_mix.txt  ALL_INSTRUCTION_TEST_xpath.txt  BAS-EX1.BAS  BLDC_CTRL_cmdTest.bas  Basic_MvTest_SVSD_wUTF.json  Basic_MvTest_SVSD_wUTF.xml  Basic_MvTest_SVSD_woUTF.bas  Basic_MvTest_SVSD_woUTF.json  Basic_MvTest_SVSD_woUTF.xml  Basic_MvTest_SVSD_woUTF_OLD.xml  Basic_MvTest_SVSD_woUTF_mix.txt  Basic_MvTest_SVSD_woUTF_xpath.txt  Basic_MvTest_wUTF.json  Basic_MvTest_wUTF.xml  Basic_MvTest_woUTF.bas  Basic_MvTest_woUTF.json  Basic_MvTest_woUTF.xml  Basic_MvTest_woUTF_mix.txt  Basic_MvTest_woUTF_xpath.txt  CMakeLists.txt  CalcArea.bas  CtoC.bas  CtoC.json  CtoC.xml  CtoC_mix.txt  CtoC_xpath.txt  Cycletime_lu.bas  Cycletime_lu.json  Cycletime_user_offset.bas  Cycletime_user_offset.json  Cycletime_yu.bas  Cycletime_yu.json  (+453 more)
MainJob/: CalcArea.bas  Homing.bas  MainJob.bas  MainJob.bas.bak  PullCard.bas  PushCard.bas
[ref].mem-share/: CMakeLists.txt  package.xml
[ref].mem-share/include/: version.h.in
config/: fst321.bas  fst321.xml  fst321_mix.txt  fst321_xpath.txt  mr_reg.yaml  pr_reg.yaml  prg_interpreter_config.yaml  prog_1 - 副本.bas  prog_1.bas  prog_1.xml  prog_1_mix.txt  prog_1_xpath.txt  prog_demo_dec.bas  prog_demo_dec_ele.bas  prog_demo_dec_mix.txt  prog_demo_dec_one_mov.xml  prog_demo_dec_reg.xml  prog_demo_dec_single_MOV.xml  prog_demo_dec_withmov.bas  prog_demo_dec_withmov_mix.txt  prog_demo_dec_withmov_xpath.txt  prog_demo_dec_xpath.txt  programs_path.yaml  r_reg.yaml  sr_reg.yaml  user_defined_variable.xml
cpu1_loader/: altera_trampoline.s  load.c  makefile
data/: fst_users.json  status_server_fixed.json  status_server_permanent.json  users.json
data/alarm_codes/: error_codes_foresight.json  tp_alarms_codes_cn.json  tp_alarms_codes_en.json
data/home/: empty.json.template
data/home/custom/: 1.json  3.json.bak
data/io/: macro_io_launch.json
data/io/io_mapping/: di_do_mapping.json  ri_ro_mapping.json  si_so_mapping.json  ui_uo_mapping.json
data/io/io_status/: ai_ao_status.json  di_do_status.json  parameters.json  ri_ro_status.json  si_so_status.json  ui_uo_status.json
data/pr/: empty.json.template
data/pr/custom/: 1.json
data/programs/: v2.2_long_time_test_program.json  v2.2_long_time_test_program.xml
data/template/: robot_program_base_file.py
data/tf/: empty.json.template
data/tf/custom/: 0.json
data/uf/: empty.json.template
data/uf/custom/: 0.json
include/: common.h  error_monitor.h  forsight_basint.h  forsight_eval_type.h  forsight_external_resource.h  forsight_home_pose.h  forsight_innercmd.h  forsight_innerfunc.h  forsight_inter_control.h  forsight_interpreter_shm.h  forsight_io_controller.h  forsight_io_mapping.h  forsight_launch_code_startup.h  forsight_macro_instr_startup.h  forsight_misc_func.h  forsight_program_property.h  fst_datatype.h  interpreter_common.h  io_interface.h  launch_code_mgr.h  macro_instr_mgr.h  tp_reg_manager_interface.h
include/reg-shmi/: forsight_err_shmi.h  forsight_fst_datatype.h  forsight_op_regs_shmi.h  forsight_op_shmi.h  forsight_registers.h  forsight_regs_shmi.h
include/reg_manager/: base_reg.h  forsight_registers_manager.h  hr_reg.h  mr_reg.h  pr_reg.h  r_reg.h  reg_manager_interface.h  reg_manager_interface_wrapper.h  sr_reg.h
reg-shmi/include/: forsight_fst_datatype.h  forsight_op_regs_shmi.h  forsight_op_shmi.h  forsight_peterson.h  forsight_registers.h  forsight_regs_shmi.h  regs_shmi.h~
reg-shmi/src/: forsight_op_reg_shmi.cpp  forsight_op_shmi.cpp  forsight_peterson.cpp  forsight_registers.cpp
src/: forsight_basint.cpp  forsight_cJSON.cpp  forsight_external_resource.cpp  forsight_home_pose.cpp  forsight_innercmd.cpp  forsight_innerfunc.cpp  forsight_int_main.cpp  forsight_inter_control.cpp  forsight_interpreter_shm.cpp  forsight_io_controller.cpp  forsight_io_mapping.cpp  forsight_launch_code_startup.cpp  forsight_macro_instr_startup.cpp  forsight_misc_func.cpp  forsight_program_property.cpp  forsight_xml_reader.cpp  io_interface.cpp  launch_code_mgr.cpp  macro_instr_mgr.cpp
src/reg-shmi/: forsight_op_reg_shmi.cpp  forsight_op_shmi.cpp  forsight_peterson.cpp  forsight_registers.cpp
src/reg_manager/: base_reg.cpp  forsight_registers_manager.cpp  hr_reg.cpp  mr_reg.cpp  pr_reg.cpp  r_reg.cpp  reg_manager_interface.cpp  reg_manager_interface_wrapper.cpp  sr_reg.cpp
test/: prg_interpreter_main.cpp  rt_task.cpp  thread_help.cpp  thread_help.h
